Fix image stretching problem
Image used to stretch and take half of available space when zoom out.

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,13 @@ body {
     
 }
 
+.image {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 50%;
+}
+
 .header, .footer {
     color: #f9faf8;
     justify-content: center;
@@ -144,7 +151,7 @@ a {
 }
 
 img {
-    width: 50%;
+    width: 640px;
     height: 240px;
 }
 
